[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Pause/Pause.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Field/Field.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Game/GameCamera.gd" type="Script" id=4]
[ext_resource path="res://Audio/ropopong/exported/20220915/Master.tres" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=6]
[ext_resource path="res://UI/HUD/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/FinalScreen/FinalScreen.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_blend_mode = 1
glow_hdr_scale = 0.32
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]
script = ExtResource( 6 )
main_menu_scene_path = "res://Scenes/MainMenu/MainMenu.tscn"

[node name="GameCamera" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
script = ExtResource( 4 )

[node name="Field" parent="." instance=ExtResource( 2 )]

[node name="Balls" type="Node" parent="."]

[node name="Ball" parent="Balls" instance=ExtResource( 3 )]
position = Vector2( 512, 344 )

[node name="Explosions" type="Node" parent="."]

[node name="Paddles" type="Node" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="MenusCanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Pause" parent="MenusCanvasLayer" instance=ExtResource( 1 )]
pause_mode = 2
unique_name_in_owner = true
visible = false

[node name="FinalScreen" parent="MenusCanvasLayer" instance=ExtResource( 8 )]
pause_mode = 2
unique_name_in_owner = true
visible = false

[node name="HUDCanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="HUD" parent="HUDCanvasLayer" instance=ExtResource( 7 )]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )

[connection signal="goal_left" from="Field" to="." method="_on_Field_goal_left"]
[connection signal="goal_right" from="Field" to="." method="_on_Field_goal_right"]
[connection signal="collided_with_paddle" from="Balls/Ball" to="." method="_on_Ball_collided_with_paddle"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
[connection signal="end" from="MenusCanvasLayer/Pause" to="." method="_on_Pause_end"]
[connection signal="play" from="MenusCanvasLayer/Pause" to="." method="_on_Pause_play"]
[connection signal="end" from="MenusCanvasLayer/FinalScreen" to="." method="_on_FinalScreen_end"]
[connection signal="play" from="MenusCanvasLayer/FinalScreen" to="." method="_on_FinalScreen_play"]
